--- a/stylesheets/scss/ie.scss
+++ b/stylesheets/scss/ie.scss
@@ -27,6 +27,14 @@ label {
 	}
 }
 
+#prev-post {
+	
+	.arrow {
+		background: $color-midtone inline-image('arrow-left.png') no-repeat 16px 15px;
+	}
+	 
+}
+
 .post-group {
 	position: relative;
 }
