Make IE CSS build clean

--- a/ie.css
+++ b/ie.css
@@ -27,6 +27,10 @@ label {
   margin-left: 0;
 }
 
+#prev-post .arrow {
+  background: #5d504f url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAQCAYAAADESFVDAAAAWElEQVR42qXSzQkAIAgF4EZolEZqhDZqpEZwBM8dovSUYD9YwuNdPgIlt5tWa6AA9wkgpXPfACeagaeAAGkFigDZACbKAoAC+5f+od7Oesh/iC+/QC/DPQAIxvkuqJQtLgAAAABJRU5ErkJggg==') no-repeat 16px 15px;
+}
+
 .post-group {
   position: relative;
 }
